[gd_scene load_steps=6 format=3 uid="uid://cxij6uwgj6j2i"]

[ext_resource type="Script" uid="uid://bcch8ic52h4pd" path="res://level_select.gd" id="1_il3u1"]
[ext_resource type="Texture2D" uid="uid://uwj0iu2sf3th" path="res://background_sky.png" id="2_bv7n5"]
[ext_resource type="Script" uid="uid://cy7yh0tnrgfsu" path="res://level/CloudLayer.gd" id="3_lmhjs"]
[ext_resource type="Texture2D" uid="uid://cuehnoavdsng8" path="res://background_clouds2.png" id="4_1iyaf"]
[ext_resource type="Texture2D" uid="uid://bj01mx3s4wgwo" path="res://background_clouds.png" id="5_1wnlg"]

[node name="LevelSelect" type="Control"]
editor_description = "Each level appears after you finish it.

-fireball turns smaller and smaller but you can extend it's duration by having it next to more fire!

-One of the stages have something to do with timing with bombs

-One of the levels have something to do with timing with fireballs!"
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_il3u1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.255177, 0.560864, 0.494744, 1)

[node name="LVLMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -32.0
offset_right = 298.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelContainer" type="HBoxContainer" parent="LVLMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="LVL1" type="Button" parent="LVLMarginContainer/LevelContainer"]
layout_mode = 2
text = "Level 1"

[node name="LVL2" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 2"

[node name="LVL3" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 3"

[node name="LVL4" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 4"

[node name="LVL5" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 5"

[node name="LVL6" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 6"

[node name="LVL7" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 7"

[node name="LVL8" type="Button" parent="LVLMarginContainer/LevelContainer"]
visible = false
layout_mode = 2
text = "Level 8"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color(0.355314, 0.355314, 0.355314, 1)
texture = ExtResource("2_bv7n5")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(576, 0)
script = ExtResource("3_lmhjs")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("4_1iyaf")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(576, 0)
script = ExtResource("3_lmhjs")
CLOUD_SPEED = -30

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("5_1wnlg")
centered = false
metadata/_edit_lock_ = true

[node name="LittleHint" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 296.0
offset_right = 352.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 14
text = "Press 0 to Change Filter"

[node name="ReturnToTitle" type="Button" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
text = "Return to Title"

[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL5" to="." method="_on_lvl_5_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL6" to="." method="_on_lvl_6_pressed"]
[connection signal="pressed" from="LVLMarginContainer/LevelContainer/LVL7" to="." method="_on_lvl_7_pressed"]
[connection signal="pressed" from="ReturnToTitle" to="." method="_on_return_to_title_pressed"]
